...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <color key="tintColor" red="0.01176470588" green="0.60392156860000001" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="I'd rather not"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
                                                    <constraint firstAttribute="height" constant="50" id="3FK-GC-Aj1"/>
                                                </constraints>
                                                <state key="normal" title="Birthday"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="contacts"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                </connections>
                            </tableView>
                            <searchBar contentMode="top" fixedFrame="YES" placeholder="Search Contacts" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lky-LC-br6">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Add Birthday" id="Bcf-FP-Pn5">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="sOi-ir-NHI">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="36"/>
                    <state key="normal" image="AddButton"/>
                    <connections>
                        <segue destination="yLv-5V-7Zp" kind="presentation" identifier="" animates="NO" modalPresentationStyle="overCurrentContext" id="mUe-ow-vgH"/>
...
        <scene sceneID="ZbA-He-lsq">
            <objects>
                <tableViewController title="Me" automaticallyAdjustsScrollViewInsets="NO" id="oW0-P8-u3k" customClass="ProfileViewController" customModule="Confetti" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="tableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="mUQ-aT-Kyd">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
