...
    
    @IBOutlet weak var heroView: HeroView!
    
    var handle: AuthStateDidChangeListenerHandle?
    
    enum Action: String {
        case logout = "Logout"
        case loginWithFacebook = "Login with Facebook"
        case crash = "Crash the app!"
        case testNotification = "Send test notification"
        case showVersion = "showVersion"
    }
    
...
